Better rounded corners with overflow-hidden (fixes scrollbar corners too)

--- a/packages/forms/resources/css/components/code-editor.css
+++ b/packages/forms/resources/css/components/code-editor.css
@@ -1,18 +1,18 @@
 .fi-fo-code-editor {
-    & .cm-editor {
-        @apply rounded-lg;
+    @apply overflow-hidden;
 
+    & .cm-editor {
         &.cm-focused {
             @apply outline-none!;
         }
 
         & .cm-gutters {
-            @apply min-h-48! rounded-s-lg border-e-gray-300! bg-gray-100! dark:border-e-gray-800! dark:bg-gray-950!;
+            @apply min-h-48! border-e-gray-300! bg-gray-100! dark:border-e-gray-800! dark:bg-gray-950!;
 
             & .cm-gutter {
                 &.cm-lineNumbers {
                     & .cm-gutterElement {
-                        @apply ms-1 rounded-s-md;
+                        @apply ms-1;
 
                         &.cm-activeLineGutter {
                             @apply bg-gray-200! dark:bg-gray-800!;
